# shadowbot

./: .env.example  .gitignore  README.md  api.md  shadowbot_run.py
.github/: shadowbot-issue-triage.yaml  shadowbot-reviewer.yaml  triage-context.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-pr-comment.yml  benchmark.yml  build-image.yml  claude.yml  docker-publish.yml  gemini-issue-review.yml  gemini-pr-review.yml  python-package.yml  python-publish.yml  release.yml  shadowbot-issue-triage.yml  shadowbot-pr-review.yml  test-comprehensive.yml  test-core.yml  test-extended.yml  test-frameworks.yml  test-optimized.yml  test-real.yml  test-windows.yml  update-api-md.yml  update-docs-parity.yml  update-parity-tracker.yml
docker/: README.md  docker-compose.dev.yml  docker-compose.yml  quick-start.sh  services.yaml
docker/bots/: README.md  docker-compose.yml
docker/call/: README.md
examples/: README.md  agent_centric_api.py  endpoints_example.py  guardrail_example_fixed.py  recipe_output_modes.py  workflow_output_modes.py
examples/acp/: basic_acp_server.py  custom_agent_acp.py
examples/ag2/: ag2_basic.yaml  ag2_bedrock.yaml  ag2_multi_agent.yaml
examples/agent_tools/: agent_centric_example.py
examples/approval/: README.md  agent_approval.py  discord_approval.py  http_approval.py  slack_approval.py  telegram_approval.py
examples/async_runs/: README.py  cancel.sh  cli_submit_poll_result.sh  idempotency.sh  sse_stream.sh  (+1 more)
examples/python/plugin_template/: README.md  pyproject.toml
examples/python/plugin_template/src/shadowbot_example_plugin/: __init__.py
scripts/: smoke_n4_real.py  smoke_w1_botos_real.py  smoke_w1_real.py  smoke_w1_robust.py
(+3259 files in other folders)
