[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowbot-example-plugin"
version = "1.0.0"
description = "Example plugin for ShadowBot Agents - demonstrates tool plugin development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["shadowbot", "agents", "tools", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "shadowbotagents>=0.0.168",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

# This is the key part - register your tools as entry points
# The format is: tool_name = "module.path:ClassName" or "module.path:function_name"
[project.entry-points."shadowbotagents.tools"]
example_greet = "shadowbot_example_plugin:GreetTool"
example_math = "shadowbot_example_plugin:MathTool"
example_reverse = "shadowbot_example_plugin:reverse_text"

[project.urls]
Homepage = "https://github.com/yourusername/shadowbot-example-plugin"
Documentation = "https://github.com/yourusername/shadowbot-example-plugin#readme"
Repository = "https://github.com/yourusername/shadowbot-example-plugin"

[tool.setuptools.packages.find]
where = ["src"]
